# openclaw-workspace

./: .env.example  .gitignore  AGENTS.md  AI_DRAMA_PLATFORM_ARCHITECTURE.md  AUTOMATION_SETUP.md  COMMAND_CENTER.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_STARTUP.md  DEVELOPMENT_SUMMARY.md  DEVELOPMENT_TASK.md  EVOLUTION_QUICKSTART.md  EVOLUTION_SYSTEM_REPORT.md  HEARTBEAT.md  IDENTITY.md  MODELS.md  PHASE3_P0_SUMMARY.md  PHASE3_P2_DELIVERABLES.md  PHASE3_P2_PROGRESS_2026-03-08.md  PHASE3_P2_SUMMARY.md  PHASE3_P2_TEST_GUIDE.md  PHASE3_TASKS.md  PROGRESS.md  PROJECTS.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  RAG_README.md  README.md  SOUL.md  TASK_COMPLETION_SUMMARY.md  TOOLS.md  USER.md  USER_GUIDE.md  WORK_PRINCIPLES.md  architecture.md  auto-evolution-guide.md  auto-skill-installer.skill  capability-inventory.md  config-openclaw-cron.sh  dashboard.html  (+7 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
.opencode/: config.json
auto-skill-installer/: SKILL.md
automation-architecture/: automation-system-2.0.md  capability-validation.md  knowledge-system.md  (+1 more)
short-video-platform/video-processor/: README.md  cli.py  pyproject.toml  requirements.txt
short-video-platform/video-processor/examples/: pipeline_example.py  usage_examples.py
short-video-platform/video-processor/src/: __init__.py  batch_processor.py  ffmpeg_wrapper.py  frame_extractor.py  metadata_manager.py  video_compressor.py  video_converter.py  video_editor.py  video_processor.py  video_watermark.py
short-video-platform/video-processor/tests/: README.md  test_video_processor.py
(+598 files in other folders)
