[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-processor"
version = "1.0.0"
description = "短视频生成平台视频处理模块"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Short Video Platform", email = "dev@example.com"}
]
keywords = ["video", "ffmpeg", "processing", "short-video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/example/short-video-platform"
Documentation = "https://github.com/example/short-video-platform#readme"
Repository = "https://github.com/example/short-video-platform.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
